--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
 
             <nav>
-               <H3>WEBSTUDIO</H3>
+               <a href="index.html">WEBSTUDIO</a>
 
             <ul>
                 <li><a href="/">Studio</a></li>
@@ -96,22 +96,22 @@
                 <h2>Our Team</h2>
                 <ul>
                     <li>
-                        <img src="images/TeamCard1.jpg" alt="">
+                        <img src="images/TeamCard1.jpg" alt="" width="264">
                         <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="images/TeamCard2.jpg" alt="">
+                        <img src="images/TeamCard2.jpg" alt="" width="264">
                         <h3>Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="images/TeamCard3.jpg" alt="">
+                        <img src="images/TeamCard3.jpg" alt="" width="264">
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="images/TeamCard4.jpg" alt="">
+                        <img src="images/TeamCard4.jpg" alt="" width="264">
                         <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </li>
