--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <main>
             <section class="hero">
-                <img src="images/Dark-bg.jpg" alt="">
+                <img src="images/Dark-bg.jpg" alt="" width="1440">
                 <h1>Effective Solutions
                 for Your Business</h1>
                 <button type="button">Order Service</button>
@@ -78,13 +78,13 @@
                 <h2>What are we doing</h2>
                 <ul>
                     <li>
-                        <img src="images/img1.jpg" alt="momitor">
+                        <img src="images/img1.jpg" alt="monitor" width="360">
                     </li>
                     
-                    <li><img src="images/img2.jpg" alt="smartphone1">
+                    <li><img src="images/img2.jpg" alt="smartphone1" width="360">
                     </li>
                     <li>
-                        <img src="images/img3.jpg" alt="smartphone2">
+                        <img src="images/img3.jpg" alt="smartphone2" width="360">
                     </li>
                 </ul>
                 
